<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/Question_first" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_first_A"
                    style="@style/AnswerTextStyle"
                    android:text="@string/Answer_first_A" />

                <RadioButton
                    android:id="@+id/radio_first_B"
                    style="@style/AnswerTextStyle"
                    android:text="@string/Answer_first_B" />

                <RadioButton
                    android:id="@+id/radio_first_C"
                    style="@style/AnswerTextStyle"
                    android:text="@string/Answer_first_C" />

                <RadioButton
                    android:id="@+id/radio_first_D"
                    style="@style/AnswerTextStyle"
                    android:text="@string/Answer_first_D" />

            </RadioGroup>

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/Question_second" />

            <EditText
                android:id="@+id/editText_second"
                style="@style/AnswerTextStyle"
                android:hint="@string/hint" />

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/Question_third" />

            <CheckBox
                android:id="@+id/checkbox_thrid_A"
                style="@style/AnswerTextStyle"
                android:text="@string/Answer_third_A" />

            <CheckBox
                android:id="@+id/checkbox_thrid_B"
                style="@style/AnswerTextStyle"
                android:text="@string/Answer_third_B" />

            <CheckBox
                android:id="@+id/checkbox_thrid_C"
                style="@style/AnswerTextStyle"
                android:text="@string/Answer_third_C" />

            <CheckBox
                android:id="@+id/checkbox_thrid_D"
                style="@style/AnswerTextStyle"
                android:text="@string/Answer_third_D" />

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/Question_fourth" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_fourth_B"
                    style="@style/AnswerTextStyle"
                    android:text="@string/Answer_fourth_B" />

                <RadioButton
                    android:id="@+id/radio_fourth_A"
                    style="@style/AnswerTextStyle"
                    android:text="@string/Answer_fourth_A" />

            </RadioGroup>

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/Question_fifth" />

            <CheckBox
                android:id="@+id/checkbox_fifth_A"
                style="@style/AnswerTextStyle"
                android:text="@string/Answer_fifth_A" />

            <CheckBox
                android:id="@+id/checkbox_fifth_B"
                style="@style/AnswerTextStyle"
                android:text="@string/Answer_fifth_B" />

            <CheckBox
                android:id="@+id/checkbox_fifth_C"
                style="@style/AnswerTextStyle"
                android:text="@string/Answer_fifth_C" />

            <CheckBox
                android:id="@+id/checkbox_fifth_D"
                style="@style/AnswerTextStyle"
                android:text="@string/Answer_fifth_D" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textColor="#FFF" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>